--- a/.github/workflows/main_ledgeremail-gittest.yml
+++ b/.github/workflows/main_ledgeremail-gittest.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Functions Deploy action: https://github.com/azure/functions-action
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - Ledgeremail-gitTest
 
 on:
@@ -39,7 +36,8 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          zip -r release.zip . -x "venv/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -47,7 +45,6 @@ jobs:
           name: python-app
           path: |
             release.zip
-            !venv/
 
   deploy:
     runs-on: ubuntu-latest
